<resources>
    <string name="settings_save_failed">Could not save changes.</string>
    <string name="app_name" translatable="false">Android Kit</string>
    <string name="action_add">Add</string>
    <string name="action_close">Close</string>
    <string name="action_retry">Retry</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_save">Save</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="nav_components">Components</string>
    <string name="nav_localization">Localization</string>
...
